--- a/bookstore/src/main/resources/templates/addbook.html
+++ b/bookstore/src/main/resources/templates/addbook.html
@@ -18,6 +18,10 @@
 			<input type="number" th:field="*{year}" />
 			<label for="price">Price</label>
 			<input type="number" step="0.01" th:field="*{price}" />
+			<label for="category">Category</label>
+			<select th:field="*{category}">
+				<option th:each="cat : ${categories}" th:value="${cat}" th:text="${cat}"></option>
+			</select>
 			<input type="submit" class="btn btn-success"  value="Save" />
 		</form>
 	</div>
