--- a/bookstore/src/main/resources/templates/editbook.html
+++ b/bookstore/src/main/resources/templates/editbook.html
@@ -18,6 +18,9 @@
 			<label for="year">Year</label>
 			<input type="number" th:field="*{year}" />
 			<label for="price">Price</label>
+			<select th:field="*{category}" th:selected="*{category}">
+				<option th:each="cat : ${categories}" th:value="${cat}" th:text="${cat}"></option>
+			</select>
 			<input type="number" step="0.01" th:field="*{price}" />
 			<input type="submit" value="Save" />
 		</form>
