--- a/bookstore/src/main/resources/templates/addbook.html
+++ b/bookstore/src/main/resources/templates/addbook.html
@@ -2,6 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
 <meta http-equiv="Content Type" content="text/html" charset="UTF-8">
+<link type="text/css" rel="stylesheet" href="../css/bootstrap.min.css" th:href="@{../css/bootstrap.min.css}" />
 <title>Adding book</title>
 </head>
 <body>
@@ -9,20 +10,20 @@
 	<div>
 		<form action="#" th:action="@{save}" method="post" th:object="${book}">
 			<label for="author">Author</label>
-			<input type="text" th:field="*{author}" />
+			<input type="text" th:field="*{author}" class="form-control"/>
 			<label for="title">Title</label>
-			<input type="text" th:field="*{title}" />
+			<input type="text" th:field="*{title}" class="form-control"/>
 			<label for="isbn">ISBN</label>
-			<input type="text" th:field="*{isbn}" />
+			<input type="text" th:field="*{isbn}" class="form-control"/>
 			<label for="year">Year</label>
-			<input type="number" th:field="*{year}" />
+			<input type="number" th:field="*{year}" class="form-control"/>
 			<label for="price">Price</label>
-			<input type="number" step="0.01" th:field="*{price}" />
+			<input type="number" step="0.01" th:field="*{price}" class="form-control"/>
 			<label for="category">Category</label>
-			<select th:field="*{category}">
-				<option th:each="cat : ${categories}" th:value="${cat}" th:text="${cat}"></option>
+			<select th:field="*{category}" class="form-control">
+				<option th:each="cat : ${categories}" th:value="${cat.categoryid}" th:text="${cat}"></option>
 			</select>
-			<input type="submit" class="btn btn-success"  value="Save" />
+			<input type="submit" class="btn btn-success"  value="Save"/>
 		</form>
 	</div>
 </body>
