--- a/bookstore/src/main/resources/templates/editbook.html
+++ b/bookstore/src/main/resources/templates/editbook.html
@@ -2,27 +2,30 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
 <meta http-equiv="Content Type" content="text/html" charset="UTF-8">
+<link type="text/css" rel="stylesheet" href="../css/bootstrap.min.css" th:href="@{../css/bootstrap.min.css}" />
 <title>Edit book</title>
 </head>
 <body>
 	<h1>Edit book</h1>
-	<div>
+	<div class="form-group">
 		<form action="#" th:action="@{../save}" method="post" th:object="${book}">
 			<input type="hidden" th:field="*{id}" class="form-control">
 			<label for="author">Author</label>
-			<input type="text" th:field="*{author}" />
+			<input type="text" th:field="*{author}" class="form-control"/>
 			<label for="title">Title</label>
-			<input type="text" th:field="*{title}" />
+			<input type="text" th:field="*{title}" class="form-control"/>
 			<label for="isbn">ISBN</label>
-			<input type="text" th:field="*{isbn}" />
+			<input type="text" th:field="*{isbn}" class="form-control"/>
 			<label for="year">Year</label>
-			<input type="number" th:field="*{year}" />
+			<input type="number" th:field="*{year}" class="form-control"/>
 			<label for="price">Price</label>
-			<select th:field="*{category}" th:selected="*{category}">
-				<option th:each="cat : ${categories}" th:value="${cat}" th:text="${cat}"></option>
+			<input type="number" step="0.01" th:field="*{price}" class="form-control"/>
+			<label for="category">Category</label>
+			<select th:field="*{category}" th:selected="*{category}" class="form-control">	
+				<option th:each="cat : ${categories}" th:value="${cat.categoryid}" th:text="${cat}"></option>
 			</select>
-			<input type="number" step="0.01" th:field="*{price}" />
-			<input type="submit" value="Save" />
+			
+			<input type="submit" value="Save" class="btn btn-success"/>
 		</form>
 	</div>
 </body>
