--- a/bookstore/src/main/resources/templates/index.html
+++ b/bookstore/src/main/resources/templates/index.html
@@ -2,10 +2,11 @@
 <html>
 <head>
 <meta http-equiv="Content Type" content="text/html" charset="UTF-8">
+<link type="text/css" rel="stylesheet" href="css/bootstrap.min.css"/>
 <title>Bookstore</title>
 </head>
 <body>
 	<h1>Welcome to the Bookstore</h1>
-	<a href="./booklist">List of books</a>
+	<a class="nav-link" href="./booklist">List of books</a>
 </body>
 </html>
